--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,13 @@
 /vendor
 .env
 .env.backup
+.env.example
 .phpunit.result.cache
 docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
+README.md
 yarn-error.log
 /.idea
 /.vscode
