--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.49.7",
+        "sass-loader": "^12.1.0",
         "vue": "^2.6.14"
     }
 }
